--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,7 +47,7 @@
 .dark-background {
   --background-color: #000820;
   --default-color: #ffffff;
-  --heading-color: #ffffff;
+  --heading-color: #008CCF;
   --surface-color: #001553;
   --contrast-color: #ffffff;
 }
